 - #5629, Handling EMPTY components in repeated point removal (Paul Ramsey)
 - #5604, Handle distance between collections with empty elements (Paul Ramsey)
 - #5635, Handle NaN points in ST_Split (Regina Obe)
 - #5648, postgis_raster upgrade fails on PG16 (Ronan Dunklau)
 - Logic error in ST_Covers(geography) (Paul Ramsey)
 - #5646, Crash on collections with empty members (Paul Ramsey)


PostGIS 3.3.5
2023/11/19
This version requires PostgreSQL 11-16, GEOS 3.6 or higher, and Proj 4.9+
Additional features are enabled if you are running GEOS 3.9+
 (and ST_MakeValid enhancements with 3.10+),
Proj 6.1+, and PostgreSQL 15+.

* Bug Fixes and Enhancements *
 - #5598, Fix restore of 3.3 dumps (Sandro Santilli)
 - #5568, Improve robustness of topology face split handling (Sandro Santilli)
 - #5548, Fix box-filtered validity check of topologies with edge-less faces
          (Sandro Santilli)
 - #5442,#5525 [postgis_tiger_geocoder,postgis_topology]
          Database search_path does not do
          what it intends to do (Jelte Fennema, Sandro Santilli, Regina Obe)
 - #5494, Fix double-upgrade with view using st_dwithin(text, ...)
          (Sandro Santilli)
 - Fix JsonB casting issue (Paul Ramsey)
 - #5616, Fix to find docbook on newer docbook installs (Regina Obe)
 - #5605, Fix regression failure with GEOS 3.13, main branch (Regina Obe)


PostGIS 3.3.4
2023/07/28

* Bug Fixes and Enhancements *
  - #5450, Fix macro expansion recursion on powerpc architectures.
           (Bas Couwenberg)
  - #5395, [postgis_topology] Allow unprivileged user dump
           of database with topology enabled
  - #5394, [postgis_topology] Improve robustness of finding
           distinct vertices in topology edges (Sandro Santilli)
  - #5403, [postgis_topology] Fix ValidateTopology(bbox) without
           topology in search_path (Sandro Santilli)
  - #5410, [postgis_raster] ST_Value bilinear resample,
           don't throw an error if Band has no NODATA value
           (Regina Obe)