@@ -19,6 +19,7 @@ Proj 6.1+, and PostgreSQL 15+.
  - #5648, postgis_raster upgrade fails on PG16 (Ronan Dunklau)
  - Logic error in ST_Covers(geography) (Paul Ramsey)
  - #5646, Crash on collections with empty members (Paul Ramsey)
+ - #5580, Handle empty collection components in 3d distance (Paul Ramsey)
 
 
 PostGIS 3.3.5
